force-app/main/default/objects/LLC_BI__Scenario__c/LLC_BI__Scenario__c.object-meta.xml
<CustomObject>
    <description>The Pro Forma for an opportunity.</description>
    <label>Scenario</label>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>