force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Annualized_Difference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Annualized_Difference__c</fullName>
    <description>This field is populated automatically via formula. This field stores annualized total charge difference.</description>
    <formula>LLC_BI__Total_Charge_Difference__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>