force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Competitor_Earnings_Credit_Allowance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Competitor_Earnings_Credit_Allowance__c</fullName>
    <description>This field is optional. It is populated manually in the proforma. This field stores a competitor&apos;s earnings credit allowance percentage.</description>
    <label>Competitor Earnings Credit Allowance (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>