force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Competitor_Total_Charge__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Competitor_Total_Charge__c</fullName>
    <description>This field is populated automatically via formula. This field stores the value of a competitor&apos;s total charge.</description>
    <formula>LLC_BI__Svc_Total__c +  LLC_BI__Total_Competitor_Difference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Total Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>