force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Discount_Currency_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Discount_Currency_Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field is populated automatically. This field stores the discounted amount of the entire performa.</description>
    <label>Discount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>