force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Earnings_Credit_Allowance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Earnings_Credit_Allowance__c</fullName>
    <description>This field is not required and is populated manually. This field stores the total customer&apos;s percentage of earnings credit allowance for the proforma.</description>
    <label>Earnings Credit Allowance (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>