force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Investable_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Investable_Balance__c</fullName>
    <description>This field is populated automatically via formula. It stores the available balances to support services.</description>
    <formula>LLC_BI__Average_Collected_Balance__c - LLC_BI__Reserve_Requirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investable Balance / (ECA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>