force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field marks this scenario as this proforma already having been converted to treasury services</description>
    <label>Is_Converted</label>
    <type>Checkbox</type>
</CustomField>