force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Net_Deficit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Net_Deficit__c</fullName>
    <description>This field is populated automatically via formula. It stores the difference between the the service total and the earnings credit allowance. This is the net amount due, unless the earnings credit allowance is more than the service total.</description>
    <formula>IF(LLC_BI__Earnings_Credit_Allowance_Amount__c &lt;= 0, LLC_BI__Svc_Total__c, LLC_BI__Svc_Total__c - LLC_BI__Earnings_Credit_Allowance_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Deficit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>