force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Net_Investable_Excess_Deficit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Net_Investable_Excess_Deficit__c</fullName>
    <description>This field is populated automatically via formula. It stores the investable balance after the minimum balance required for services, if the initial investable balance is positive. Otherwise, it just shows the minimum balance required for services.</description>
    <formula>IF(LLC_BI__Investable_Balance__c &lt; 0 ,LLC_BI__Balance_Required__c, (LLC_BI__Investable_Balance__c - LLC_BI__Balance_Required__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Investable Excess / Deficit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>