force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is populated automatically when creating a scenario from opportunity. This field specifies the opportunity associated with the scenario.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scenarios</relationshipLabel>
    <relationshipName>Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>