force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Reserve_Requirement_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reserve_Requirement_Rate__c</fullName>
    <description>This field is optional. It is populated manually in the proforma. This fields stores the percentage value that sets the minimum fraction of customer deposits and notes that each commercial bank must hold.</description>
    <label>Reserve Requirement Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>