force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Scenario_Url__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Scenario_Url__c</fullName>
    <description>This field is populated automatically when the proforma is created. This field is a hyperlink. This field links to the Performa visualforce page where values from the scenario where imputed and calculated.</description>
    <formula>HYPERLINK(&quot;/apex/&quot; + $Label.LLC_BI__Namespace + &quot;__Scenario?id=&quot; + LLC_BI__Opportunity__r.Id + &quot;&amp;scenarioId=&quot; + Id, $Label.LLC_BI__View_Proforma)</formula>
    <label>Proforma</label>
    <type>Text</type>
</CustomField>