force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Setup_Fee__c</fullName>
    <description>The system automatically populates this currency field with the sum of scenario item records where the LLC_BI_Is_Monthly_c checkbox is not selected.</description>
    <label>Setup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>