force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Show_Competitor_Pricing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Show_Competitor_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an optional field. It is populated based on the user selecting to show or hide the Competitor Pricing column on a scenario.</description>
    <label>Show Competitor Pricing</label>
    <type>Checkbox</type>
</CustomField>