force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Total_Balance_Required_Difference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Balance_Required_Difference__c</fullName>
    <description>This field is automatically populated via trigger. It stores the difference between LLC_BI__Total_Balance_Required__c and Total_Competitor_Balance_Required__c.</description>
    <label>Total Balance Required Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>