force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Total_Charge_Difference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Charge_Difference__c</fullName>
    <description>This field is populated automatically via formula. It holds the value of expenses on a company&apos;s income statement that is either releated to debt that is deemed uncollectible.</description>
    <formula>LLC_BI__Competitor_Total_Charge__c -  LLC_BI__Svc_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charge Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>