force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Total_Gross_Fee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Gross_Fee__c</fullName>
    <description>This field is automatically calculated via a sum roll-up. It is the sum of the LLC_BI__Gross_Fee__c for all children LLC_BI__Scenario_Item__c. It stores the value of the gross fees associated to all bill points in the scenario.</description>
    <label>Total Gross Fee</label>
    <summarizedField>LLC_BI__Scenario_Item__c.LLC_BI__Gross_Fee__c</summarizedField>
    <summaryForeignKey>LLC_BI__Scenario_Item__c.LLC_BI__Scenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>